Always prevent horizontal overflow on isc-page-content.

--- a/src/common/assets/sass/isc/_isc-layout.scss
+++ b/src/common/assets/sass/isc/_isc-layout.scss
@@ -2,6 +2,7 @@
 
 .isc-page-content {
   padding: 3rem 3rem 0 3rem;
+  overflow-x: hidden;
 
   @media #{$tab-or-less} {
     padding: 3rem 1rem 0 1rem;
@@ -94,7 +95,6 @@
 }
 
 .grid-content .grid-block {
-    margin-left: 0;
-    margin-right: 0;
-    flex-wrap: initial;
+  margin-left: 0;
+  margin-right: 0;
 }
